--- a/TicTacToe/MainWindow.xaml
+++ b/TicTacToe/MainWindow.xaml
@@ -25,7 +25,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Button Command="{Binding StepCommand}" Background="White" CommandParameter="{Binding Id}" Content="{Binding Text}" Focusable="false" MinHeight="30" MinWidth="30" MaxHeight="30" MaxWidth="30" FontWeight="Bold" FontSize="19">
+                        <Button Command="{Binding StepCommand}" CommandParameter="{Binding Id}" Content="{Binding Text}" Focusable="false" MinHeight="30" MinWidth="30" MaxHeight="30" MaxWidth="30" FontWeight="Bold" FontSize="19">
                             <Button.Style>
                                 <!-- gomb stílusa, ahol a színét megadjuk -->
                                 <Style TargetType="Button">
@@ -35,7 +35,7 @@
                                             <Setter Property="Background" Value="Gray" />
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding IsEnabled}" Value="False">
-                                            <Setter Property="Background" Value="White" />
+                                            <Setter Property="Background" Value="{Binding Color}" />
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
